fixed navbar on mobile

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .upload {
-	
+
 	font-size: 30px;
   	line-height: 1.33;
 }
@@ -18,7 +18,7 @@ body {
   width: 100%;
   height: 150px;
   padding-top: 30px;
-  
+
 }
 
 .media-object {
@@ -30,3 +30,5 @@ img {
   -webkit-transform: rotate(90deg) scale(0.75,0.75);
   transform: rotate(90deg) scale(0.75,0.75);
 }
+
+.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
